# isle

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_en.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-windows.yml  release.yml
resource/doc/: OPTIMIZATION_PLAN.md  music_library_implementation.md  personal_space_interaction.md  personal_space_module.md  player_engine_implementation.md  project.md  technical_solution.md
