[workspace]
resolver = "2"
members = [
    "packages/api",
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
dioxus-logger = "0.6"
tracing = "0.1"

# workspace
api = { path = "packages/api" }
ui = { path = "packages/ui" }
